WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
6421
<text> textLength attribute is not respected
https://bugs.webkit.org/show_bug.cgi?id=6421
Summary
<text> textLength attribute is not respected
Eric Seidel (no email)
Reported
2006-01-08 01:28:50 PST
<text> textLength attribute is not respected
http://www.w3.org/TR/SVG/text.html#TextElement
Attachments
Initial patch
(30.31 KB, patch)
2007-10-11 16:01 PDT
,
Nikolas Zimmermann
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Nikolas Zimmermann
Comment 1
2007-10-11 16:01:49 PDT
Created
attachment 16634
[details]
Initial patch Also fixes
bug 6422
.
Oliver Hunt
Comment 2
2007-10-11 16:24:48 PDT
Comment on
attachment 16634
[details]
Initial patch r=me, with the changes we discussed in irc.
Nikolas Zimmermann
Comment 3
2007-10-11 16:27:10 PDT
Landed in
r26371
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug