Reviewed by Oliver.

Fixes: http://bugs.webkit.org/show_bug.cgi?id=6421 (<text> textLength attribute is not respected)
Fixes: http://bugs.webkit.org/show_bug.cgi?id=6422 (<text> lengthAdjust attribute is not respected)

Implement textLength and full lengthAdjust (both 'spacing' & 'spacingAndGlyphs' mode)
for <text> & <tspan> & friends. <textPath> is still todo, as it's special.

Also fix usage of cummulatedGlyphWidth/Height in SVGInlineTextBox, calculateGlyphBoundaries was
supposed to be used in the distance calculations, to take per character transformations into account (ie. rotation).

Fixes: svg/W3C-SVG-1.1/text-text-01-b.svg (complelty fixed the single W3C textLength testcase)
Partly fixed: svg/batik/text/textOnPathSpaces.svg (kerning support missing)
Partly fixed: svg/batik/text/textLayout.svg (word-letter spacing & textLength is todo)



Canonical link: https://commits.webkit.org/20531@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@26541 268f45cc-cd09-0410-ab3c-d52691b4dbfc