WebCore/rendering/SVGCharacterLayoutInfo.h
@@ -32,6 +32,7 @@
 
 #include "AffineTransform.h"
 #include "SVGRenderStyle.h"
+#include "SVGTextContentElement.h"
 
 namespace WebCore {
 
@@ -96,7 +97,7 @@ struct SVGCharacterLayoutInfo {
     void processedChunk(float savedShiftX, float savedShiftY);
     void processedSingleCharacter();
 
-    bool nextPathLayoutPointAndAngle(float& x, float& y, float& angle, float glyphAdvance, float newOffset);
+    bool nextPathLayoutPointAndAngle(float& x, float& y, float& angle, float glyphAdvance, float extraAdvance, float newOffset);
 
     // Used for text-on-path.
     void addLayoutInformation(InlineFlowBox*, float textAnchorOffset = 0.0);
@@ -202,19 +203,34 @@ struct SVGInlineBoxCharacterRange {
     InlineBox* box;
 };
 
+// Convenience typedef
+typedef SVGTextContentElement::SVGLengthAdjustType ELengthAdjust;
+
 struct SVGTextChunk {
     SVGTextChunk()
         : anchor(TA_START)
+        , textLength(0.0)
+        , lengthAdjust(SVGTextContentElement::LENGTHADJUST_SPACING)
+        , ctm()
         , isVerticalText(false)
         , isTextPath(false)
         , start(0)
         , end(0)
     { }
 
+    // text-anchor support
     ETextAnchor anchor;
+
+    // textLength & lengthAdjust support
+    float textLength;
+    ELengthAdjust lengthAdjust;
+    AffineTransform ctm;
+
+    // status flags
     bool isVerticalText : 1;
     bool isTextPath : 1;
 
+    // main chunk data
     Vector<SVGChar>::iterator start;
     Vector<SVGChar>::iterator end;
 
@@ -224,8 +240,9 @@ struct SVGTextChunk {
 struct SVGTextChunkWalkerBase {
     virtual ~SVGTextChunkWalkerBase() { }
 
-    virtual void operator()(SVGInlineTextBox* textBox, int startOffset, const Vector<SVGChar>::iterator& start, const Vector<SVGChar>::iterator& end) = 0;
-    
+    virtual void operator()(SVGInlineTextBox* textBox, int startOffset, const AffineTransform& chunkCtm,
+                            const Vector<SVGChar>::iterator& start, const Vector<SVGChar>::iterator& end) = 0;
+
     // Followings methods are only used for painting text chunks
     virtual void start(InlineBox*) = 0;
     virtual void end(InlineBox*) = 0;
@@ -239,6 +256,7 @@ struct SVGTextChunkWalker : public SVGTextChunkWalkerBase {
 public:
     typedef void (CallbackClass::*SVGTextChunkWalkerCallback)(SVGInlineTextBox* textBox,
                                                               int startOffset,
+                                                              const AffineTransform& chunkCtm,
                                                               const Vector<SVGChar>::iterator& start,
                                                               const Vector<SVGChar>::iterator& end);
 
@@ -266,9 +284,10 @@ public:
         ASSERT(walker);
     }
 
-    virtual void operator()(SVGInlineTextBox* textBox, int startOffset, const Vector<SVGChar>::iterator& start, const Vector<SVGChar>::iterator& end)
+    virtual void operator()(SVGInlineTextBox* textBox, int startOffset, const AffineTransform& chunkCtm,
+                            const Vector<SVGChar>::iterator& start, const Vector<SVGChar>::iterator& end)
     {
-        (*m_object.*m_walkerCallback)(textBox, startOffset, start, end);
+        (*m_object.*m_walkerCallback)(textBox, startOffset, chunkCtm, start, end);
     }
 
     // Followings methods are only used for painting text chunks
